--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ decorator==5.1.1
 distro==1.9.0
 executing==2.0.1
 fastapi==0.115.8
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
@@ -38,7 +39,6 @@ pydantic_core==2.27.2
 Pygments==2.17.2
 python-dateutil==2.8.2
 pytz==2024.1
-pywin32==306
 pyzmq==25.1.2
 requests==2.32.3
 scikit-learn==1.4.1.post1
